--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
   - "pypy3.5"
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  - pip install sympy
 # command to run tests
 script: BSSN/test/run_BSSN_tests.sh
