--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,20 @@
 # from https://docs.travis-ci.com/user/languages/python/
+dist: xenial # needed for Python 3.7+: https://docs.travis-ci.com/user/reference/xenial/#python-support
 language: python
 python:
+  - "3.7"  # Latest Python, as of Jun 2019.
   # PyPy versions
-  - "pypy3.5"
+  - "pypy2.7-6.0"
+  - "pypy3.5-6.0"
 # command to install dependencies
 install:
   - pip install sympy
+#  - pip install coverage
+#  - pip install codecov
 # We generally don't need to install matplotlib for the test.
 #  - pip install -r requirements.txt
 # command to run tests
-script: BSSN/test/run_BSSN_tests.sh
+script: BSSN/test/run_NRPy_UnitTests.sh
+# After completion, push results to codecov
+#after_success:
+#  - codecov
