Travis: Switch to Python 3.4 & Python 3.8-dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@
 dist: xenial # needed for Python 3.7+: https://docs.travis-ci.com/user/reference/xenial/#python-support
 language: python
 python:
-  - "2.7"
-  - "3.6"
+  - "3.4"  # oldest Python 3.x supported
   - "3.7"  # Latest Python, as of Jun 2019.
+  - "3.8-dev" # development Python
   # PyPy versions
   - "pypy2.7-6.0"
   - "pypy3.5-6.0"
