--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
   - "pypy3.5-6.0"
 # command to install dependencies
 install:
-  - pip install sympy
+  - pip install -U sympy virtualenv
 #  - pip install coverage
 #  - pip install codecov
 # We generally don't need to install matplotlib for the test.
