--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,9 @@ matrix:
       before_install:
         - choco install python3
         - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
-        - python -m pip install --upgrade pip wheel
+        - python -m pip3 install --upgrade pip wheel
       install:
-        - pip install mpmath sympy
+        - pip3 install mpmath sympy
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
       env: PYTHONPATH=.:./UnitTesting/:$PYTHONPATH
       script: ./UnitTesting/run_NRPy_UnitTests.sh python
