--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,9 @@ matrix:
       before_install:
         - choco install python3
         - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
-        - python -m pip3 install --upgrade pip wheel
+        - ls /c/ProgramData/chocolatey/lib/mingw/tools/install/mingw64/opt/bin/
+        - python -m ensurepip
+        - python -m pip install --upgrade pip wheel
       install:
         - pip3 install mpmath sympy
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
