--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,31 @@ language: python
 
 matrix:
   include:
-    # - name: "SymPy-dev: Ubuntu Linux Xenial pypy3.5-6.0"
-    #   os: linux
-    #   dist: xenial
-    #   python: pypy3.5-6.0
-    #   install:
-    #     - pip install mpmath testfixtures
-    #     - git clone https://github.com/sympy/sympy
-    #     - cd sympy
-    #     - git revert c1e25a445f1c27829ea8cf0e04dbdd6d749834ce
-    #     - cd ..
-    #     - pip install git+file:///sympy/
-    #   script: ./UnitTesting/run_NRPy_UnitTests.sh pypy3
+    - name: "SymPy-dev: Ubuntu Linux Xenial pypy3.5-6.0"
+      os: linux
+      dist: xenial
+      python: pypy3.5-6.0
+      install:
+        - pip install mpmath testfixtures
+        - git clone https://github.com/sympy/sympy
+        - cd sympy
+        - echo "diff --git a/sympy/core/add.py b/sympy/core/add.py
+> index adb7c673b5..7bdbb66410 100644
+> --- a/sympy/core/add.py
+> +++ b/sympy/core/add.py
+> @@ -395,7 +395,7 @@ def _eval_power(self, e):
+>            for i in c:
+>                float = float or i.is_Float
+>                if abs(i) > big:
+> -                  big = 1.0*abs(i)
+> +                  big = (1.0*abs(i)).evalf(50)
+>                    s = -1 if i < 0 else 1
+>            if float and big and big != 1:
+>                addpow = Add(*[(s if abs(c[i]) == big else c[i]/big)*m[i] for i in range(len(c))])**e
+> " | patch -p1
+        - cd ..
+        - pip install git+file:///sympy/
+      script: ./UnitTesting/run_NRPy_UnitTests.sh pypy3
 
     - name: "Ubuntu Linux Xenial pypy2.7-6.0"
       os: linux
