--- a/.travis.yml
+++ b/.travis.yml
@@ -11,20 +11,8 @@ matrix:
         - pip install mpmath testfixtures
         - git clone https://github.com/sympy/sympy
         - cd sympy
-        - echo "diff --git a/sympy/core/add.py b/sympy/core/add.py
-> index adb7c673b5..7bdbb66410 100644
-> --- a/sympy/core/add.py
-> +++ b/sympy/core/add.py
-> @@ -395,7 +395,7 @@ def _eval_power(self, e):
->            for i in c:
->                float = float or i.is_Float
->                if abs(i) > big:
-> -                  big = 1.0*abs(i)
-> +                  big = (1.0*abs(i)).evalf(50)
->                    s = -1 if i < 0 else 1
->            if float and big and big != 1:
->                addpow = Add(*[(s if abs(c[i]) == big else c[i]/big)*m[i] for i in range(len(c))])**e
-> " | patch -p1
+        - wget http://astro.phys.wvu.edu/zetienne/sympy_add_fix.diff
+        - cat sympy_add_fix.diff | patch -p1
         - cd ..
         - pip install git+file:///sympy/
       script: ./UnitTesting/run_NRPy_UnitTests.sh pypy3
