--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
         - wget http://astro.phys.wvu.edu/zetienne/sympy_add_fix.diff
         - cat sympy_add_fix.diff | patch -p1
         - cd ..
-        - pip install git+file:///sympy/
+        - pip install git+file:///./sympy/
       script: ./UnitTesting/run_NRPy_UnitTests.sh pypy3
 
     - name: "Ubuntu Linux Xenial pypy2.7-6.0"
