--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: python
 
 matrix:
   include:
-    - name: "SymPy-dev: Ubuntu Linux Xenial pypy3.5-6.0"
+    - name: "SymPy-dev Ubuntu Linux Xenial pypy2.7-6.0"
       os: linux
       dist: xenial
-      python: pypy3.5-6.0
+      python: pypy2.7-6.0
       install:
         - pip install mpmath testfixtures
         - git clone https://github.com/sympy/sympy
@@ -14,8 +14,8 @@ matrix:
         - wget http://astro.phys.wvu.edu/zetienne/sympy_add_fix.diff
         - cat sympy_add_fix.diff | patch -p1
         - cd ..
-        - pip install git+file://`pwd`/sympy/
-      script: ./UnitTesting/run_NRPy_UnitTests.sh pypy3
+        - pip install -U git+file://`pwd`/sympy/
+      script: ./UnitTesting/run_NRPy_UnitTests.sh pypy
 
     - name: "Ubuntu Linux Xenial pypy2.7-6.0"
       os: linux
