--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
         - cd sympy
         - wget http://astro.phys.wvu.edu/zetienne/sympy_add_fix.diff
         - cat sympy_add_fix.diff | patch -p1
+        - git commit -a -m "blah"
         - cd ..
         - pip install -U git+file://`pwd`/sympy/
       script: ./UnitTesting/run_NRPy_UnitTests.sh pypy
