--- a/.travis.yml
+++ b/.travis.yml
@@ -91,21 +91,22 @@ matrix:
       python: 3.7
       script: ./UnitTesting/run_NRPy_UnitTests.sh python3
 
-    - name: "Ubuntu Linux Xenial CPython 3.8-dev"
-      os: linux
-      dist: xenial
-      before_script: python3 -m pip install --upgrade pip mpmath sympy
-      python: 3.8-dev
-      script: ./UnitTesting/run_NRPy_UnitTests.sh python3
+    # Unstable at times (pip broken):
+    # - name: "Ubuntu Linux Xenial CPython 3.8-dev"
+    #   os: linux
+    #   dist: xenial
+    #   before_script: python3 -m pip install --upgrade pip mpmath sympy
+    #   python: 3.8-dev
+    #   script: ./UnitTesting/run_NRPy_UnitTests.sh python3
 
-    # Unstable at times:
+    # Unstable at times (pip broken):
     # - name: "Ubuntu Linux Bionic CPython 3.9-dev"
     #   os: linux
     #   dist: bionic
     #   python: 3.9-dev
     #   script: ./UnitTesting/run_NRPy_UnitTests.sh python3
 
-    # Unstable at times:
+    # Unstable at times (pip broken):
     # - name: "Ubuntu Linux Xenial CPython NIGHTLY"
     #   os: linux
     #   dist: xenial
