--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
       python: 3.8
       sudo: true
       install:
-        - sudo apt-get -y install pdflatex pandoc
+        - sudo apt-get -y install texlive-latex-base pandoc
         - pip install mpmath jupyter matplotlib
         - pip install -U git+https://github.com/sympy/sympy/
       script: ./run_Jupyter_notebook.sh Tutorial-Coutput__Parameter_Interface.ipynb && git diff Tutorial-Coutput__Parameter_Interface.ipynb
