.travis.yml; UnitTesting/core_Jupyter_notebook_testsuite.sh: Improve robustness

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ matrix:
     - name: "JUPYTER NOTEBOOK TESTS Ubuntu Linux Bionic Python 3.8"
       os: linux
       dist: bionic
-      python: 3.8
+      python: 3.8.2
       sudo: true
       install:
         - sudo apt-get -y install texlive-latex-base pandoc
-        - pip install mpmath jupyter matplotlib
+        - pip install mpmath jupyter matplotlib scipy
         - pip install -U git+https://github.com/sympy/sympy/
       script: ./UnitTesting/core_Jupyter_notebook_testsuite.sh
 
@@ -22,7 +22,7 @@ matrix:
       sudo: true
       install:
         - sudo apt-get -y install texlive-latex-base pandoc
-        - pip install sympy mpmath jupyter matplotlib
+        - pip install sympy mpmath jupyter matplotlib scipy
       script: ./UnitTesting/core_Jupyter_notebook_testsuite.sh
 
     - name: "SymPy-dev Ubuntu Linux Xenial pypy3.5-6.0"
