--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ matrix:
       before_install:
         - choco install python --version 3.8.2
 #        - python -m ensurepip
-        - python -m pip3 install --upgrade pip3
+        - python -m pip install --upgrade pip
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
       install:
         - pip3 install --upgrade pip # all three OSes agree about 'pip3'
@@ -93,8 +93,8 @@ matrix:
 #        - python -m pip3 install --upgrade pip3
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
       install:
-        - python -m ensurepip
-        - python -m pip3 install --upgrade pip3
+#        - python -m ensurepip
+        - python -m pip install --upgrade pip
         - pip3 install --upgrade pip # all three OSes agree about 'pip3'
         - pip3 install mpmath sympy
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
@@ -107,7 +107,7 @@ matrix:
       before_install:
         - choco install python --version 3.8.2
 #        - python -m ensurepip
-        - python3 -m pip3 install --upgrade pip3
+        - python3 -m pip install --upgrade pip
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
       install:
         - pip3 install --upgrade pip # all three OSes agree about 'pip3'
